fix signup form css on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,10 +303,6 @@ input, select, textarea {
 
 /* Form */
 
-	form {
-		margin: 0 0 2rem 0;
-	}
-
 		form > :last-child {
 			margin-bottom: 0;
 		}
@@ -1292,7 +1288,6 @@ input, select, textarea {
 				-ms-transition-delay: 0.25s;
 				transition-delay: 0.25s;
 				padding: 3rem 2rem;
-				max-height: 40rem;
 				overflow: hidden;
 			}
 
